<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">dbTest</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="add_button">Add New</string>
    <string name="delete_button">Delete</string>
    <string name="defaultTextView">a textview</string>
    <string name="easyRadio">Easy Level</string>
    <string name="mediumRadio">Medium Level</string>
    <string name="hardRadio">Hard Level</string>
    <string name="addGameButton">Add a Game</string>
    <string name="choosePlayer">Choose a Player</string>
    <string name="versionNumber">1.1</string>
    <string name="title_activity_add_game">AddGameActivity</string>
    <string name="gotoGameText">Games</string>
    <string name="playerButtonText">Players</string>
    <string name="title_activity_player">PlayerActivity</string>
    <string name="achievements_title">Achievements</string>
    <string name="delete_button_hint">Delete from database. Textbox must contain ID of record to delete</string>
    <string name="edittext_hint">Name for new or ID to delete</string>
    <string name="new_game_player_hint">Type player name for new game</string>
    <string name="title_activity_new_game">NewGameActivity</string>
    <string name="game_start">Start : Time and date HH:mm:ss dd-mm-yyyy</string>
    <string name="end_game">End : Time and date.</string>
    <string name="diff_level">Select Difficulty Level</string>
    <string name="score_level">Choose Score and Level</string>
    <string name="title_activity_unlock">UnlockActivity</string>
    <string name="unlocked_title">Unlocked Achievements</string>
    <string name="unlock_random_button">Unlock Random</string>
    <string name="game_id">"for Game ID : "</string>

</resources>