<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_games"
    android:orientation="vertical"
    android:padding="@dimen/page_padding"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewGameActivity" >

    <TextView
        android:id="@+id/tvStartInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_start" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/etStartTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="time" />

        <EditText
            android:id="@+id/etStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="date" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvEndInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_game" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/etEndTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="time" />

        <EditText
            android:id="@+id/etEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="date" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvDifficultyInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diff_level" />

    <RadioButton
        android:id="@+id/rbtnEasy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/easyRadio" />

    <RadioButton
        android:id="@+id/rbtnMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mediumRadio" />

    <RadioButton
        android:id="@+id/rbtnHard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hardRadio" />

    <TextView
        android:id="@+id/tvScoreInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_level" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/etScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />

        <EditText
            android:id="@+id/etLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvPlayersInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choosePlayer" />

    <AutoCompleteTextView
        android:id="@+id/ac_tvChoosePlayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/new_game_player_hint" >

        <requestFocus />
    </AutoCompleteTextView>

    <Button
        android:id="@+id/btnAddNewGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_button" />

</LinearLayout>