<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_games"
    android:orientation="vertical"
    android:padding="@dimen/page_padding" >

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gotoGameText"
        android:textSize="@dimen/headingText" />

    <LinearLayout
        android:id="@+id/layoutGames"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.92"
        android:background="@color/bg_grey"
        android:orientation="vertical" >

    </LinearLayout>

    <LinearLayout
        style="android:buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/addGame"
            style="android:buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addGameButton" />

        <Button
            android:id="@+id/btnDelGame"
            style="android:buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_button" />

    </LinearLayout>

</LinearLayout>