<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutUnlock"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/page_padding"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UnlockActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unlocked_title"
        android:textSize="@dimen/headingText" />

    <TextView
        android:id="@+id/tvGameId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/page_padding"
        android:paddingTop="@dimen/page_padding"
        android:text="@string/game_id" />

    <LinearLayout
        android:id="@+id/layoutUnlockeds"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.51"
        android:background="@color/bg_grey"
        android:orientation="vertical" >

    </LinearLayout>

    <Button
        android:id="@+id/btnUnlockRandom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unlock_random_button" />

</LinearLayout>